--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-   
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+
     <title>To Do List</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <main class="container">
+      <img src="images/Background 2.jpg" />
+      <div class="overlay">
         <header>
-            <h1>To Do List</h1>
+          <h1>To Do List</h1>
         </header>
         <div>
-            <form id="task-form">
-                <input type="text" id="task-input" placeholder="Enter a task....">
+          <form id="task-form">
+            <input type="text" id="task-input" placeholder="Enter a task...." />
 
-                <button type="submit">Add Task</button>
-
-            </form>
-            <ul id="task-list">
-                <!-- <li>Task-1</li>
-                <li>Task-2</li>
-                <li>Task-3</li> -->
-            </ul>
+            <button type="submit">Add Task</button>
+          </form>
+          <ul id="task-list">
+            <!-- <li>Task-1</li>
+                    <li>Task-2</li>
+                    <li>Task-3</li> -->
+          </ul>
         </div>
+      </div>
     </main>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
