--- a/index.html
+++ b/index.html
@@ -1,33 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
 
-    <title>To Do List</title>
-  </head>
-  <body>
-    <main class="container">
-      <img src="images/Background 2.jpg" />
-      <div class="overlay">
-        <header>
-          <h1>To Do List</h1>
-        </header>
-        <div>
-          <form id="task-form">
-            <input type="text" id="task-input" placeholder="Enter a task...." />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TaskFlow Pro</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="CSS/style.css">
+    <script src="Js/script.js"></script>
 
-            <button type="submit">Add Task</button>
-          </form>
-          <ul id="task-list">
-            <!-- <li>Task-1</li>
-                    <li>Task-2</li>
-                    <li>Task-3</li> -->
-          </ul>
+</head>
+
+<body class="theme-transition">
+    <div class="container">
+        <h1>✨ TaskFlow Pro ✨</h1>
+
+        <div class="card">
+            <div class="controls">
+                <input id="task-input" placeholder="What needs to be done? ✍️">
+                <input type="date" id="due-date">
+                <select id="category-select">
+                    <option value="General">📋 General</option>
+                    <option value="Work">💼 Work</option>
+                    <option value="Personal">🏠 Personal</option>
+                </select>
+                <select id="priority-select">
+                    <option value="low">🟢 Low</option>
+                    <option value="medium">🟡 Medium</option>
+                    <option value="high">🔴 High</option>
+                </select>
+                <button class="btn-primary" onclick="addTask()">Add Task</button>
+                <button class="btn-theme" onclick="toggleTheme()">🌓 Theme</button>
+            </div>
+
+            <div class="filters">
+                <input id="search-input" placeholder="🔍 Search your tasks..." oninput="renderTasks()">
+                <select onchange="setFilter(this.value)">
+                    <option value="all">📝 All Tasks</option>
+                    <option value="completed">✅ Completed</option>
+                    <option value="pending">⏳ Pending</option>
+                </select>
+            </div>
         </div>
-      </div>
-    </main>
-    <script src="script.js"></script>
-  </body>
+
+        <ul id="task-list"></ul>
+
+        <div class="card">
+            <div class="stats-container">
+                <div class="stat-card">
+                    <div id="task-count" class="stat-number">0</div>
+                    <div class="stat-label">Total Tasks</div>
+                </div>
+                <div class="stat-card">
+                    <div id="completed-count" class="stat-number">0</div>
+                    <div class="stat-label">Completed</div>
+                </div>
+                <div class="progress-container stat-card">
+                    <div class="stat-label" style="margin-bottom: 1rem;">Progress</div>
+                    <div class="progress-wrapper">
+                        <div class="progress-bar" id="progress-bar"></div>
+                    </div>
+                    <div class="progress-text" id="progress-text">0% Complete</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+</body>
+
 </html>
